--- a/carousel/index.html
+++ b/carousel/index.html
@@ -37,11 +37,46 @@
     <button class="slide-1">1</button>
     <button class="slide-2">2</button>
     <button class="slide-3">3</button>
-    <button>다음</button>
+    <button class="next">다음</button>
+    <button class="before">이전</button>
 
     <script>
+      // 다음버튼 //
+      var 지금사진 = 1;
+      $(".next").on("click", function () {
+        if (지금사진 == 1) {
+          $(".slide-container").css("transform", "translateX(-100vw)");
+          지금사진 += 1;
+        } else if (지금사진 == 2) {
+          $(".slide-container").css("transform", "translateX(-200vw)");
+        }
+      });
+
+      // 이전버튼 //
+      var 지금사진 = 1;
+      $(".before").on("click", function () {
+        if (지금사진 == 1) {
+          $(".slide-container").css("transform", "translateX(0vw)");
+          지금사진 += 1;
+        } else if (지금사진 == 2) {
+          $(".slide-container").css("transform", "translateX(100vw)");
+          지금사진 += 1;
+        } else {
+          $(".slide-container").css("transform", "translateX(100vw)");
+        }
+      });
+
+      // 버튼 1,2,3 //
+      $(".slide-1").on("click", function () {
+        $(".slide-container").css("transform", "translateX(0vw)");
+      });
+
       $(".slide-2").on("click", function () {
         $(".slide-container").css("transform", "translateX(-100vw)");
+      });
+
+      $(".slide-3").on("click", function () {
+        $(".slide-container").css("transform", "translateX(-200vw)");
       });
     </script>
   </body>
