--- a/carousel/index.html
+++ b/carousel/index.html
@@ -41,27 +41,37 @@
     <button class="before">이전</button>
 
     <script>
-      // 다음버튼 //
+      // // 다음버튼 //
+      // var 지금사진 = 1;
+      // $(".next").on("click", function () {
+      //   if (지금사진 == 1) {
+      //     $(".slide-container").css("transform", "translateX(-100vw)");
+      //     지금사진 += 1;
+      //   } else if (지금사진 == 2) {
+      //     $(".slide-container").css("transform", "translateX(-200vw)");
+      //   }
+      // });
+
+      // 함수 이용한 다음버튼 //
       var 지금사진 = 1;
       $(".next").on("click", function () {
-        if (지금사진 == 1) {
-          $(".slide-container").css("transform", "translateX(-100vw)");
-          지금사진 += 1;
-        } else if (지금사진 == 2) {
-          $(".slide-container").css("transform", "translateX(-200vw)");
-        }
+        $(".slide-container").css(
+          "transform",
+          "translateX(-" + 지금사진 + "00vw)"
+        );
+        지금사진 += 1;
       });
 
-      // 이전버튼 //
-      var 지금사진 = 1;
+      // 이전버튼 ---------------------------------------------//
+      var 현재사진 = 1;
       $(".before").on("click", function () {
-        if (지금사진 == 1) {
+        if (현재사진 == 1) {
           $(".slide-container").css("transform", "translateX(0vw)");
-          지금사진 += 1;
-        } else if (지금사진 == 2) {
-          $(".slide-container").css("transform", "translateX(100vw)");
-          지금사진 += 1;
-        } else {
+          현재사진 += 1;
+        } else if (현재사진 == 2) {
+          $(".slide-container").css("transform", "translateX(0vw)");
+          현재사진 += 1;
+        } else if (현재사진 == 3) {
           $(".slide-container").css("transform", "translateX(100vw)");
         }
       });
