--- a/word-relay/index.html
+++ b/word-relay/index.html
@@ -12,40 +12,33 @@
     <input type="text" />
     <button>입력</button>
     <script>
-      // const number = parseInt(prompt("몇 명이 참가하시나요?"));
+      const number = parseInt(prompt("몇 명이 참가하시나요?"));
       const $button = document.querySelector("button");
       const $input = document.querySelector("input");
       const $word = document.querySelector("#word");
+      const $order = document.querySelector("#order");
 
       let word; // 제시어
       let newWord; //새로 입력한 단어
 
       const onClickButton = () => {
-        if (!word) {
+        if (!word || word[word.length - 1] === newWord[0]) {
           //제시어가 비어 있는가?
           word = newWord; // 입력한 단어가 제시어가 된다.
           $word.textContent = word;
-          $input.value = "";
           const order = parseInt($order.textContent); //현재 순서
           if (order === number) {
             $order.textContent = 1;
           } else {
             $order.textContent = order + 1;
           }
+          $input.value = "";
+          $input.focus();
         } else {
-          //비어 있지 않다
-          if (word[word.length - 1] === newWord[0]) {
-            word = newWord; // 입력한 단어가 제시어가 된다.
-            $word.textContent = word;
-            $input.value = "";
-            const order = parseInt($order.textContent); //현재 순서
-            if (order === number) {
-              $order.textContent = 1;
-            } else {
-              $order.textContent = order + 1;
-            }
-          } else {
-          }
+          //올바르지 않을때
+          alert("틀렸습니다!");
+          $input.value = "";
+          $input.focus();
         }
       };
 
