--- a/carousel/detail.html
+++ b/carousel/detail.html
@@ -60,15 +60,22 @@
     </style>
 
     <div class="container mt-3">
-      <div class="card p-3">상품명 / 가격</div>
+      <div class="card p-3">
+        <span class="car-title">상품명</span><span>가격</span>
+      </div>
     </div>
 
     <script>
       var car = ["소나타", 50000, "white"];
       var car2 = {
         name: "소나타",
-        price: 50000,
+        price: [50000, 3000, 4000],
       };
+
+      // document.querySelector(".card").innerHTML =
+      //   car2.name + " / " + car2.price;
+
+      document.querySelector(".car-title + span").innerHTML = car2.price[1];
     </script>
 
     <!-- 상품 탭 -->
