--- a/calculator/index.html
+++ b/calculator/index.html
@@ -56,5 +56,6 @@
       <button id="calculate">=</button>
       <button id="multiply">x</button>
     </div>
+    <script src="math.js"></script>
   </body>
 </html>
