--- a/carousel/task.html
+++ b/carousel/task.html
@@ -37,7 +37,7 @@
     <!-- 문제 3 -->
     <script>
       function 평균비교(arr, score) {
-        var result = 0;
+        let result = 0;
         for (let i = 0; i < arr.length; i++) {
           result = result + arr[i];
           console.log(result);
