--- a/carousel/list.html
+++ b/carousel/list.html
@@ -21,27 +21,56 @@
 
   <body>
     <div class="container">
-      <div class="row">
-        <!-- <div class="col-sm-4">
-          <img src="https://via.placeholder.com/600" class="w-100" />
-          <h5>Card title</h5>
-          <p>가격 : 70000</p>
-        </div>
-
-        <div class="col-sm-4">
-          <img src="https://via.placeholder.com/600" class="w-100" />
-          <h5>Card title</h5>
-          <p>가격 : 70000</p>
-        </div> -->
-      </div>
+      <div class="row"></div>
     </div>
 
+    <div class="container my-3">
+      <button class="btn btn-danger" id="price">가격순 정렬</button>
+    </div>
+
+    <div class="container my-3">
+      <button class="btn btn-danger" id="sort1">다나가 순 정렬</button>
+    </div>
+
+    <div class="container my-3">
+      <button class="btn btn-danger" id="below-price">6만원 이하 정렬</button>
+    </div>
     <script>
       var products = [
         { id: 0, price: 70000, title: "Blossom Dress" },
         { id: 1, price: 50000, title: "Springfield Shirt" },
         { id: 2, price: 60000, title: "Black Monastery" },
       ];
+
+      //다나가 순 정렬
+      // $("#sort1").click(function () {
+      //   products.sort(function (a, b) {
+      //     if(a.title < b.title) {
+      //       return 1
+      //     } else {
+      //       return -1
+      //     }
+
+      // });
+
+      // 가격순 정렬
+      $("#price").click(function () {
+        products.sort(function (a, b) {
+          return a.price - b.price;
+        });
+
+        $(".row").html("");
+
+        products.forEach((data) => {
+          let 템플릿 = `<div class="col-sm-4">
+          <img src="https://via.placeholder.com/600" class="w-100" />
+          <h5>${data.title}</h5>
+          <p>가격 : ${data.price} </p>
+        </div>`;
+          row.insertAdjacentHTML("beforeend", 템플릿);
+          // append는 $()로 찾은것에만 붙일 수 있습니다.
+        });
+      });
 
       const title = document.querySelectorAll(".card-body > h5");
       const price = document.querySelectorAll(".card-body > p");
@@ -52,18 +81,63 @@
           price[i].innerHTML = "가격 : " + products[i].price;
         }
       }
-
       getInfo();
     </script>
 
     <script>
       const row = document.querySelector(".row");
-      let 템플릿 = `<div class="col-sm-4">
+      let cnt = 0;
+
+      // card 생성
+      products.forEach((data) => {
+        let 템플릿 = `<div class="col-sm-4">
           <img src="https://via.placeholder.com/600" class="w-100" />
-          <h5>Card title</h5>
-          <p>가격 : 70000</p>
+          <h5>${data.title}</h5>
+          <p>가격 : ${data.price} </p>
         </div>`;
-      row.append(템플릿);
+        row.insertAdjacentHTML("beforeend", 템플릿);
+        // append는 $()로 찾은것에만 붙일 수 있습니다.
+      });
+    </script>
+
+    <div class="container">
+      <button class="btn btn-danger">더보기</button>
+    </div>
+    <script>
+      const btn = document.querySelector(".btn");
+
+      function btnCounter() {
+        cnt += 1;
+      }
+
+      btn.addEventListener("click", () => {
+        btnCounter();
+
+        if (cnt === 1) {
+          console.log("first click");
+          repeat(1);
+        } else if (cnt === 2) {
+          console.log("2nd click");
+          repeat(2);
+
+          btn.style.display = "none";
+        }
+      });
+
+      function repeat(num) {
+        $.get(`https://codingapple1.github.io/js/more${num}.json`).done(
+          (data) => {
+            data.forEach((a, i) => {
+              let 템플릿 = `<div class="col-sm-4">
+              <img src="https://via.placeholder.com/600" class="w-100" />
+              <h5>${data[i].title}</h5>
+              <p>가격 : ${data[i].price} </p>
+              </div>`;
+              row.insertAdjacentHTML("beforeend", 템플릿);
+            });
+          }
+        );
+      }
     </script>
   </body>
 </html>
